@@ -7,15 +7,15 @@ jsondiff >= 1.2.0
 strict-rfc3339
 mysqlclient >= 1.3.12
 pymongo >= 3.7.0
-mmcif >= 0.63
+mmcif >= 0.70
 rcsb.utils.config >= 0.35
-rcsb.utils.io >= 1.00
-rcsb.utils.multiproc >= 0.17
-rcsb.utils.chemref >= 0.70
+rcsb.utils.io >= 1.12
+rcsb.utils.multiproc >= 0.18
+rcsb.utils.chemref >= 0.72
 scandir; python_version < "3.0"
 configparser; python_version < "3.0"
-rcsb.utils.dictionary >= 0.34
-rcsb.utils.repository >= 0.12
+rcsb.utils.dictionary >= 0.40
+rcsb.utils.repository >= 0.16
 #
 SQLAlchemy; sys_platform == 'linux'
 # For crate and cockroach -
