@@ -304,3 +304,4 @@
   4-May-2021  V1.671 Remove deprecated schema attribute rcsb_nested_indexing_context.context_attributes.search_paths
  19-May-2021  V1.673 Update dependencies in rcsb.utils.dictionary
  27-May-2021  V1.674 Update dependencies to rcsb.utils.dictionary
+  2-Jun-2021  V1.675 Update dependencies to rcsb.utils.dictionary and diagnostic output
